# otto-upgrade-action

./: .gitignore  .yamllint  CONTRIBUTING.md  README.md  SECURITY.md  action.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  e2e-otto-upgrade.yaml
e2e/: README.md
e2e/astro-project/: requirements.txt
e2e/astro-project/dags/: clean_etl_dag.py  legacy_dag.py
examples/: scheduled-upgrade.yml
scripts/: apply_bump.py  build-prompt.sh  build_pr_body.py  co_resolve.py  compare_failures.py  deprecation_cleanup.py  detect_versions.py  extract_result.py  import_check.py  kb_gate.py  open-pr.sh  parse_check.py  report_fmt.py  resolve_target.py  run-otto.sh  security_fixes.py  upgrade-schema.json  verify.sh
tests/: conftest.py  test_build_pr_body.py  test_build_prompt.py  test_co_resolve.py  test_compare_failures.py  test_deprecation_cleanup.py  test_detect_and_apply.py  test_import_check.py  test_kb_gate.py  test_parse_check.py  test_resolve.py  test_security_fixes.py
tests/fixtures/: pypi-amazon.json  runtime-feed.json
