[project]
name = "otto-upgrade-action"
version = "0.0.0"
description = "Scripts for the Otto Airflow Upgrade GitHub Action"
requires-python = ">=3.10"

[dependency-groups]
dev = ["pytest>=8"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # asserts are fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
